<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        android:padding="@dimen/dime_16"
        android:id="@+id/layout_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/eduvate_logo"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/layout_login_new"/>

            <LinearLayout
                android:id="@+id/layout_login_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_login_username"
                    style="@style/Common.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="ERP Code/Application Code"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_login_password"
                    style="@style/Common.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/editText_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkBox_remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember me"
                    android:layout_marginTop="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/app_color"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_login_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Forgot Password?"
                    android:textStyle="bold"
                    android:textColor="@color/heading_text_color"
                    android:textSize="16sp"
                    android:gravity="center" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</layout>